--- a/index.html
+++ b/index.html
@@ -2,54 +2,146 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Aspect Systems - Coming Soon</title>
+  <title>Aspect Systems - Revolutionizing Cyber Security Solutions</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-
-<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<!-- Canvas -->
-<canvas class="orb-canvas"></canvas>
-<!-- Overlay -->
-<div class="overlay">
-  <!-- Overlay inner wrapper -->
-  <div class="overlay__inner">
-    <!-- Title -->
-    <h1 class="overlay__title">
-      Hey, we are workin on something
-      <span class="text-gradient">amazing</span>; innovative security
-    </h1>
-    <!-- Description -->
-    <p class="overlay__description">
-      Aspect Systems is a company that specializes in providing 
-      innovative cyber security solutions for everyone. 
-      <strong>We're gonna be available very soon, check back later.</strong>
-    </p>
-    <!-- Buttons -->
-    <div class="overlay__btns">
-
-      <button class="overlay__btn overlay__btn--transparent">
-        <a href="https://discord.gg/aspect-systems-930476025933070356" target="_blank">
-
-          Contact Us
-        </a>
-      </button>
-
-      <button class="overlay__btn overlay__btn--colors">
-        <span>Randomise Colors</span>
-        <span class="overlay__btn-emoji">🎨</span>
-      </button>
+    <canvas class="orb-canvas"></canvas>
+    <div class="overlay">
+        <div class="overlay__inner">
+            <h1 class="overlay__title">
+                Hey, we are workin on something
+                <span class="text-gradient">amazing</span>; innovative security
+            </h1>
+            <p class="overlay__description">
+                Aspect Systems is a company that specializes in providing 
+                innovative cyber security solutions for everyone. 
+                <strong>We're gonna be available very soon, check back later.</strong>
+            </p>
+            <div class="overlay__btns">
+                <button class="overlay__btn overlay__btn--transparent">
+                    <a href="https://discord.gg/aspect-systems-930476025933070356" target="_blank">
+                        Contact Us
+                    </a>
+                </button>
+                <button class="overlay__btn overlay__btn--colors">
+                    <span>Randomise Colors</span>
+                    <span class="overlay__btn-emoji">🎨</span>
+                </button>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
-<!-- partial -->
-  <script type="module" src="./script.js"></script>
-
+    <section class="hero">
+        <div class="hero__inner">
+            <h1 class="hero__title">Revolutionizing Cyber Security Solutions</h1>
+            <p class="hero__subtitle">
+                Introducing Aspect Systems, the leader in innovative cyber security solutions.
+            </p>
+            <div class="hero__btns">
+                <button class="hero__btn hero__btn--transparent">
+                    <a href="https://discord.gg/aspect-systems-930476025933070356" target="_blank">
+                        Contact Us
+                    </a>
+                </button>
+            </div>
+        </div>
+    </section>
+    <section class="description">
+        <div class="description__inner">
+            <h2 class="description__title">About Aspect Systems</h2>
+            <p class="description__text">
+                Aspect Systems is a company that specializes in providing innovative cyber security solutions for everyone. Our mission is to protect businesses and individuals from cyber threats by leveraging the latest technologies and industry best practices.
+            </p>
+        </div>
+    </section>
+    <section class="features">
+        <div class="features__inner">
+            <h2 class="features__title">Key Features</h2>
+            <ul class="features__list">
+                <li class="features__item">Advanced threat detection and prevention</li>
+                <li class="features__item">Comprehensive vulnerability assessment and management</li>
+                <li class="features__item">Real-time monitoring and alerts</li>
+                <li class="features__item">Seamless integration with existing systems and infrastructure</li>
+            </ul>
+        </div>
+    </section>
+    <section class="testimonials">
+        <div class="testimonials__inner">
+            <h2 class="testimonials__title">What Our Customers Say</h2>
+            <div class="testimonials__list">
+                <div class="testimonial">
+                    <p class="testimonial__text">
+                        "Aspect Systems has transformed our cyber security posture. Their innovative solutions have provided us with unprecedented visibility and control over our network."
+                    </p>
+                    <div class="testimonial__meta">
+                        <img src="avatar1.jpg" alt="Avatar 1" class="testimonial__avatar">
+                        <div class="testimonial__info">
+                            <span class="testimonial__name">John Doe</span>
+                            <span class="testimonial__role">CEO, XYZ Corporation</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <p class="testimonial__text">
+                        "Aspect Systems has exceeded our expectations in terms of quality, service, and support. Their team is knowledgeable, responsive, and committed to our success."
+                    </p>
+                    <div class="testimonial__meta">
+                        <img src="avatar2.jpg" alt="Avatar 2" class="testimonial__avatar">
+                        <div class="testimonial__info">
+                            <span class="testimonial__name">Jane Smith</span>
+                            <span class="testimonial__role">IT Manager, ABC Inc.</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="contact">
+        <div class="contact__inner">
+            <h2 class="contact__title">Get in Touch</h2>
+            <form class="contact__form">
+                <div class="contact__form-row">
+                    <label for="name" class="contact__form-label">Name</label>
+                    <input type="text" id="name" class="contact__form-input">
+                </div>
+                <div class="contact__form-row">
+                    <label for="email" class="contact__form-label">Email</label>
+                    <input type="email" id="email" class="contact__form-input">
+                </div>
+                <div class="contact__form-row">
+                    <label for="message" class="contact__form-label">Message</label>
+                    <textarea id="message" class="contact__form-input" rows="4"></textarea>
+                </div>
+                <button type="submit" class="contact__form-btn">Send Message</button>
+            </form>
+            <div class="contact__info">
+                <h3 class="contact__info-title">Other Ways to Reach Us</h3>
+                <ul class="contact__info-list">
+                    <li class="contact__info-item">Phone: +1 (123) 456-7890</li>
+                    <li class="contact__info-item">Email: info@aspectsystems.com</li>
+                    <li class="contact__info-item">Social Media: @aspectsystems</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer__inner">
+            <p class="footer__text">
+                Aspect Systems is a trademark of Aspect Systems, Inc. All rights reserved.
+            </p>
+            <div class="footer__links">
+                <a href="#" class="footer__link">Privacy Policy</a>
+                <a href="#" class="footer__link">Terms of Service</a>
+                <a href="#" class="footer__link">Resources</a>
+            </div>
+        </div>
+    </footer>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
