--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Generative UI - Orb Animation [pixi.js] + Frosty Elements ❄️</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <!-- Canvas -->
 <canvas class="orb-canvas"></canvas>
 <!-- Overlay -->
@@ -11,7 +27,7 @@
     </h1>
     <!-- Description -->
     <p class="overlay__description">
-      Aspect was founded primarily to provide innovative cyber security solutions for everyone. Make sure you
+      Aspect was founded primarily to provide innovative cyber security solutions for everyone. Make sure you 
       <strong>check back later.</strong>
     </p>
     <!-- Buttons -->
@@ -31,3 +47,8 @@
     </div>
   </div>
 </div>
+<!-- partial -->
+  <script type="module" src="./script.js"></script>
+
+</body>
+</html>
