--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <div class="overlay__btns">
 
       <button class="overlay__btn overlay__btn--transparent">
-        <a href="https://georgefrancis.dev/writing/create-a-generative-landing-page-and-webgl-powered-background/" target="_blank">
+        <a href="https://discord.gg/aspect-systems-930476025933070356" target="_blank">
 
-          View Tutorial
+          Join Our Community
         </a>
       </button>
 
